字符串压缩 支持 JDK 9+